# coin_flip_contract_near

./: Cargo.toml
src/: lib.rs
